force-app/main/default/objects/Item__c/Item__c.object-meta.xml
<CustomObject>
    <label>Item</label>
    <pluralLabel>Items</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Item Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>

    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <type>Url</type>
    </fields>

    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <type>Currency</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
</CustomObject>